# rosen_abstract_node

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
action/: StateTransition.action
doc/: abstract_driver.xmi  abstract_node_fsm.vsdx
include/rosen_abstract_node/: AbstractNodeSm.h  DummyNode.h  NodeStateHelper.h  NodeTransitionHelper.h  RosenAbstractNode.h  StateMachine.h  TestUtils.h  TransitionsRostest.h  abstract_node_sm.h  dummy_node.h  node_state_helper.h  node_transition_helper.h  rosen_abstract_node.h  state_machine.h  test_utils.h  transitions_rostest.h
launch/: abstract_node_transitions_rostest_tests.xml  dummy_node.launch  python_dummy_node.launch  set_node_to_running.launch
msg/: NodeState.msg  NodeStateInfo.msg  NodeTransition.msg
rostest/: DiagnosticsRostest.cpp  TransitionsRostest.cpp  configured_looprate_rostest_cpp.test  configured_looprate_rostest_pyt.test  configured_looprate_rostest_tests.xml  diagnostics_rostest.cpp  diagnostics_rostest_cpp.test  diagnostics_rostest_pyt.test  diagnostics_rostest_tests.xml  flags_published.xml  flags_published_cpp.test  flags_published_pyt.test  publishers_rostest_cpp.test  publishers_rostest_pyt.test  publishers_rostest_tests.xml  transitions_rostest.cpp  transitions_rostest_cpp.test  transitions_rostest_pyt.test
scripts/: python_dummy_node.py
src/: AbstractNodeSm.cpp  DummyNode.cpp  ExecuteTransitions.cpp  ManualActionTest.cpp  RosenAbstractNode.cpp  StateMachine.cpp  TestUtils.cpp  abstract_node_sm.cpp  dummy_node.cpp  execute_transitions.cpp  manual_action_test.cpp  rosen_abstract_node.cpp  state_machine.cpp  test_utils.cpp
src/rosen_abstract_node/: abstract_node_sm.py  node_state_helper.py  node_transition_helper.py  rosen_abstract_node.py  state_machine.py
test/: AbstractNodeSmTest.cpp  AbstractNodeTest.cpp  NodeStateHelperTest.cpp  NodeTransitionHelperTest.cpp  StateMachineTest.cpp  abstract_node_sm_test.cpp  abstract_node_test.cpp  node_state_helper_test.cpp  node_state_helper_test.py  node_transition_helper_test.cpp  node_transition_helper_test.py  state_machine_test.cpp  test_main.cpp
