<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosen_abstract_node</name>
  <version>1.0.0</version>
  <description>Base class with common state machine to control node behaviour and
  useful functionality to be implemented by ros nodes.</description>

  <maintainer email="amiller@rosen-group.com">Artur Miller</maintainer>

  <license>BSD-3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>rostest</depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>libncurses-dev</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rosapi</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <test_depend>rosunit</test_depend>

</package>

